# vcpkg_base

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile  vcpkg.json
cmake/: CMakeModule.cmake  CompilerOptions.cmake  CoreConfig.cmake  FindPackages.cmake
src/: CMakeLists.txt
